# cd-data-converter

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
src/cd_data_converter/assets/: countries.py
src/cd_data_converter/cli/: app.py  config.py
src/cd_data_converter/core/: deduplicating_list.py  file_handlers.py  main.py  parser_.py
src/cd_data_converter/models/: cd.py
src/cd_data_converter/utils/: logger.py
tests/cd_data_converter/assets/: test_countries.py
tests/cd_data_converter/cli/: test_app.py  test_config.py
tests/cd_data_converter/core/: test_deduplicating_list.py  test_file_handlers.py  test_main.py  test_parser_.py
tests/cd_data_converter/models/: test_cd.py
tests/cd_data_converter/test_assets/: cd_catalog.json  cd_catalog.xml  cd_catalog_broken_tag.xml  cd_catalog_duplicate.xml  cd_catalog_missing_data.xml
tests/cd_data_converter/utils/: test_logger.py
