[metadata]
name = cd_data_converter
version = 1.0.0
description = "Parse XML files with CD data to JSON."
long_description = file: README.md
long_description_content_type = text/markdown

[project]
requires-python = >=3.8

[options]
include_package_data = True
install_requires =
    pybloom @ git+https://github.com/jaybaird/python-bloomfilter.git#egg=pybloom
    defusedxml ~= 0.7.1
    pydantic ~= 1.9.2
    typer[all] ~= 0.6.1


[options.extras_require]
dev = 
    bandit ~= 1.7.4
    black ~= 22.6.0
    flake8 ~= 5.0.4
    mypy ~= 0.971
    isort ~= 5.10.1
    pytest ~= 7.1.2


[options.entry_points]
console_scripts = 
    cd-data-converter = cd_data_converter.cli.app:run
